clang/test/BSC/Negative/Ownership/Owned/owned_memberExpr/owned_memberExpr.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

struct Base {
    int num;
};

struct A {
    int b;
    _Owned int* c; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    _Owned struct Base base; // expected-error {{type of 'struct Base' cannot be qualified by '_Owned'}}
};

int * _Owned foo(_Owned int* a) { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    return (int* _Owned)a;
}

void test2() {
    struct A _Owned a; // expected-error {{type of 'struct A' cannot be qualified by '_Owned'}}
    int res = a.b;                  //unlike const, a.b's QualType is int(not _Owned int)
    int * _Owned res2 = foo(a.c);      //a.c's QualType is _Owned int*(not _Owned int* _Owned)
    int res3 = a.base.num;
}